# cgiar_root_volume_estimation_challenge_by_jsvinasco

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
cgiar_root_volume_estimation/: __init__.py  dataset.py  features.py  plots.py
cgiar_root_volume_estimation/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
