[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cgiar_root_volume_estimation"
version = "0.0.1"
description = "Personal participation in the \"CGIAR Root Volume Estimation Challenge\""
authors = [
  { name = "Juan Sebastian Vinasco Salinas" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["cgiar_root_volume_estimation"]
force_sort_within_sections = true

# Main pixi entry
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.0"



[tool.pixi.dependencies]
pandas = ">=2.2.3,<3"
ipython = ">=8.31.0,<9"
python = ">=3.13.1,<3.14"
